--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -902,11 +902,11 @@
                                                                                 <button class="btn btn-success pull-left next-step"  attrStatus="KLARIFIKASILANJUTAN" elDari="#next-penilaian-dari" elSampai="#next-penilaian-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
-                                                                         <div class="col-md-2">
+                                                                         <!--<div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button class="btn btn-success pull-left lewati-tahapan" disabled="disabled" attrStatus="KLARIFIKASILANJUTAN" elDari="#next-penilaian-dari" elSampai="#next-penilaian-sampai">Lewati Tahapan</button>
                                                                             </div>
-                                                                        </div>
+                                                                        </div>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -1004,11 +1004,11 @@
                                                                                 <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step" attrStatus="PENILAIAN" elDari="#next-pemenang-dari" elSampai="#next-pemenang-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-md-2">
+                                                                        <!--<div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button class="btn btn-success pull-left lewati-tahapan" disabled="disabled" attrStatus="PENILAIAN" elDari="#next-pemenang-dari" elSampai="#next-pemenang-sampai">Lewati Tahapan</button>
                                                                             </div>
-                                                                        </div>
+                                                                        </div>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
